--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ShapeDrawActivity"
+            android:label="@string/title_activity_shape_draw"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cs211d.joel.demodrawables.MainActivity" />
+        </activity>
+        <activity
+            android:name=".MoveShapeActivity"
+            android:label="@string/title_activity_move_shape"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cs211d.joel.demodrawables.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
